# FastPimpl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: FastPimpl.h
test/: CMakeLists.txt  Interface.cpp  Interface.h  Main.cpp  NativeType.h
